the navigation bar was merged with the collapsible mobile menu in index.html, was created the function that shows and collapses the mobile menu in main.js and the CSS was modified to let the merger works correctly.

--- a/styles/desktop.css
+++ b/styles/desktop.css
@@ -30,11 +30,16 @@
     height: 24rem;
 }
 
+/*Menu*/
+.mobileMenu{
+    display: none;
+}
+
 /*Collapsible menu*/
 .desktopMenu{
     display: block;
     position: absolute;
-    top: 4.4rem;
+    top: 6rem;
     right: 6rem;
     width: 15rem;
     height: auto;
